--- a/course-notes/qgis/style.css
+++ b/course-notes/qgis/style.css
@@ -5,15 +5,15 @@ body {
   color: black;
   background: white;
 }
-:link { color: #0A8000; background: transparent }
-:visited { color: #215E21; background: transparent }
-a:active { color: #0A8000; background: transparent }
+:link { color: #00C; background: transparent }
+:visited { color: #609; background: transparent }
+a:active { color: #C00; background: transparent }
 
 a:link img, a:visited img { border-style: none } 
 
 
 h1, h2, h3, h4, h5, h6 { text-align: left }
-h1, h2, h3 { color: #228B22; background: white }
+h1, h2, h3 { color: #005A9C; background: white }
 h1 { font: 170% sans-serif }
 h2 { font: 140% sans-serif }
 h3 { font: 120% sans-serif }
